--- a/CRM/CRM.csproj
+++ b/CRM/CRM.csproj
@@ -227,6 +227,9 @@
     <Resource Include="Resources\unnamed.jpg" />
     <Resource Include="Resources\user_group.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\crm.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
